Set overflow hidden to the html element to avoid X scrollbar caused by AOS animations

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,8 @@ html {
   font-size: 62.5%;
   font-family: "Quicksand", sans-serif;
   scroll-behavior: smooth;
-  color: #fff; }
+  color: #fff;
+  overflow-x: hidden; }
 
 .preload * {
   -webkit-transition: none !important;
